Fixed select style on safari.

--- a/sass/_universal.scss
+++ b/sass/_universal.scss
@@ -181,6 +181,7 @@ h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:la
     -webkit-text-fill-color: transparent;
     padding: 0.2rem 0;
     width: fit-content;
+    -webkit-box-decoration-break: clone;
 }
 li {
     list-style-type: none;
@@ -322,7 +323,17 @@ select {
     font-size: 1.6rem;
     border: 0.1rem solid transparent;
     outline: 0.1rem solid transparent;
+    @media not all and (min-resolution:.001dpcm) { 
+        @supports (-webkit-appearance:none) {
+            -webkit-appearance: none;
+            background-color: $white;
+        }
+   }
 }
+
+
+
+
 @media screen and (min-width: $xx) {
     .hf-form .hf-fields-wrap {
         grid-template-columns: 1fr 1fr;
